# pyiconv

./: INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  black.yml
src/pyiconv/: __init__.py  lib.py
src/pyiconv/cli/: pyiconv.py
