[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiconv"
version = "0.2.0"
authors = [{ name = "MET Norway" }]
description = "simple python based replacement for iconv also supporting weird encodings"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/metno/pyiconv"
"Bug Tracker" = "https://github.com/metno/pyiconv/issues"

[project.scripts]
pyiconv = "pyiconv.cli.pyiconv:main"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true
sqlite_cache = true

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
skip_missing_interpreters = True
isolated_build = True

envlist =
    py311
    format

[testenv]
commands = python3 -m unittest discover -s tests

[testenv:format]
commands =
    pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit
"""